// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<DoughnutChart /> > renders Doughnut with expected props 1`] = `
<div>
  <div
    class="flex flex-col md:flex-row md:items-center gap-y-4"
  >
    <div
      class="md:flex-7"
    >
      <div>
        <div
          class="recharts-wrapper"
          height="300"
          style="position: relative; cursor: default; width: 800px; height: 300px;"
          width="800"
        >
          <div
            class="recharts-tooltip-wrapper"
            style="visibility: hidden; pointer-events: none; position: absolute; top: 0px; left: 0px;"
            tabindex="-1"
            xmlns="http://www.w3.org/1999/xhtml"
          >
            <div
              aria-live="assertive"
              class="recharts-default-tooltip"
              role="status"
              style="margin: 0px; padding: 10px; background: rgba(0, 0, 0, 0.9); border: none; white-space: nowrap; color: white; border-radius: 5px;"
            >
              <p
                class="recharts-tooltip-label"
                style="margin: 0px;"
              />
            </div>
          </div>
          <svg
            class="recharts-surface"
            cx="50%"
            cy="50%"
            height="300"
            role="application"
            style="width: 100%; height: 100%; display: block;"
            tabindex="0"
            viewBox="0 0 800 300"
            width="800"
          >
            <title />
            <desc />
            <g
              tabindex="-1"
            />
            <g
              tabindex="-1"
            />
            <defs>
              <clippath
                id="recharts4-clip"
              >
                <rect
                  height="290"
                  width="790"
                  x="5"
                  y="5"
                />
              </clippath>
            </defs>
            <g
              tabindex="-1"
            >
              <g
                class="recharts-layer recharts-pie"
                tabindex="0"
              >
                <g
                  class="recharts-layer"
                >
                  <g
                    class="recharts-layer recharts-pie-sector"
                    tabindex="-1"
                  />
                  <g
                    class="recharts-layer recharts-pie-sector"
                    tabindex="-1"
                  />
                </g>
              </g>
            </g>
            <g
              tabindex="-1"
            />
            <g
              tabindex="-1"
            />
            <g
              tabindex="-1"
            />
            <g
              tabindex="-1"
            />
            <g
              tabindex="-1"
            />
            <g
              tabindex="-1"
            />
            <g
              tabindex="-1"
            />
            <g
              tabindex="-1"
            />
            <g
              tabindex="-1"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="md:flex-5"
    >
      <ul
        class="space-y-1"
      >
        <li
          class="flex items-center"
        >
          <div
            class="inline-block w-[20px] h-[20px] rounded-full align-[-4px] mr-1.5"
            data-testid="color-bullet-0"
            style="background-color: rgb(151, 187, 205);"
          />
          <small
            class="truncate grow"
            data-testid="name-0"
          >
            foo
            <b>
               (
              123
              )
            </b>
          </small>
        </li>
        <li
          class="flex items-center"
        >
          <div
            class="inline-block w-[20px] h-[20px] rounded-full align-[-4px] mr-1.5"
            data-testid="color-bullet-1"
            style="background-color: rgb(247, 70, 74);"
          />
          <small
            class="truncate grow"
            data-testid="name-1"
          >
            bar
            <b>
               (
              456
              )
            </b>
          </small>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<DoughnutChart /> > renders Doughnut with expected props 2`] = `
<div>
  <div
    class="flex flex-col md:flex-row md:items-center gap-y-4"
  >
    <div
      class="md:flex-7"
    >
      <div>
        <div
          class="recharts-wrapper"
          height="300"
          style="position: relative; cursor: default; width: 800px; height: 300px;"
          width="800"
        >
          <div
            class="recharts-tooltip-wrapper"
            style="visibility: hidden; pointer-events: none; position: absolute; top: 0px; left: 0px;"
            tabindex="-1"
            xmlns="http://www.w3.org/1999/xhtml"
          >
            <div
              aria-live="assertive"
              class="recharts-default-tooltip"
              role="status"
              style="margin: 0px; padding: 10px; background: rgba(0, 0, 0, 0.9); border: none; white-space: nowrap; color: white; border-radius: 5px;"
            >
              <p
                class="recharts-tooltip-label"
                style="margin: 0px;"
              />
            </div>
          </div>
          <svg
            class="recharts-surface"
            cx="50%"
            cy="50%"
            height="300"
            role="application"
            style="width: 100%; height: 100%; display: block;"
            tabindex="0"
            viewBox="0 0 800 300"
            width="800"
          >
            <title />
            <desc />
            <g
              tabindex="-1"
            />
            <g
              tabindex="-1"
            />
            <defs>
              <clippath
                id="recharts7-clip"
              >
                <rect
                  height="290"
                  width="790"
                  x="5"
                  y="5"
                />
              </clippath>
            </defs>
            <g
              tabindex="-1"
            >
              <g
                class="recharts-layer recharts-pie"
                tabindex="0"
              >
                <g
                  class="recharts-layer"
                >
                  <g
                    class="recharts-layer recharts-pie-sector"
                    tabindex="-1"
                  />
                  <g
                    class="recharts-layer recharts-pie-sector"
                    tabindex="-1"
                  />
                </g>
              </g>
              <g
                class="recharts-layer recharts-pie"
                tabindex="0"
              >
                <g
                  class="recharts-layer"
                >
                  <g
                    class="recharts-layer recharts-pie-sector"
                    tabindex="-1"
                  />
                  <g
                    class="recharts-layer recharts-pie-sector"
                    tabindex="-1"
                  />
                </g>
              </g>
            </g>
            <g
              tabindex="-1"
            />
            <g
              tabindex="-1"
            />
            <g
              tabindex="-1"
            />
            <g
              tabindex="-1"
            />
            <g
              tabindex="-1"
            />
            <g
              tabindex="-1"
            />
            <g
              tabindex="-1"
            />
            <g
              tabindex="-1"
            />
            <g
              tabindex="-1"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="md:flex-5"
    >
      <ul
        class="space-y-1"
      >
        <li
          class="flex items-center"
        >
          <div
            class="inline-block w-[20px] h-[20px] rounded-full align-[-4px] mr-1.5"
            data-testid="color-bullet-0"
            style="background-color: rgb(151, 187, 205);"
          />
          <small
            class="truncate grow"
            data-testid="name-0"
          >
            foo
            <b>
               (
              123
              )
            </b>
          </small>
        </li>
        <li
          class="flex items-center"
        >
          <div
            class="inline-block w-[20px] h-[20px] rounded-full align-[-4px] mr-1.5"
            data-testid="color-bullet-1"
            style="background-color: rgb(247, 70, 74);"
          />
          <small
            class="truncate grow"
            data-testid="name-1"
          >
            bar
            <b>
               (
              456
              )
            </b>
          </small>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<DoughnutChart /> > renders Doughnut with expected props 3`] = `
<div>
  <div
    class="flex flex-col md:flex-row md:items-center gap-y-4"
  >
    <div
      class="md:flex-7"
    >
      <div>
        <div
          class="recharts-wrapper"
          height="300"
          style="position: relative; cursor: default; width: 800px; height: 300px;"
          width="800"
        >
          <div
            class="recharts-tooltip-wrapper"
            style="visibility: hidden; pointer-events: none; position: absolute; top: 0px; left: 0px;"
            tabindex="-1"
            xmlns="http://www.w3.org/1999/xhtml"
          >
            <div
              aria-live="assertive"
              class="recharts-default-tooltip"
              role="status"
              style="margin: 0px; padding: 10px; background: rgba(0, 0, 0, 0.9); border: none; white-space: nowrap; color: white; border-radius: 5px;"
            >
              <p
                class="recharts-tooltip-label"
                style="margin: 0px;"
              />
            </div>
          </div>
          <svg
            class="recharts-surface"
            cx="50%"
            cy="50%"
            height="300"
            role="application"
            style="width: 100%; height: 100%; display: block;"
            tabindex="0"
            viewBox="0 0 800 300"
            width="800"
          >
            <title />
            <desc />
            <g
              tabindex="-1"
            />
            <g
              tabindex="-1"
            />
            <defs>
              <clippath
                id="recharts12-clip"
              >
                <rect
                  height="290"
                  width="790"
                  x="5"
                  y="5"
                />
              </clippath>
            </defs>
            <g
              tabindex="-1"
            >
              <g
                class="recharts-layer recharts-pie"
                tabindex="0"
              >
                <g
                  class="recharts-layer"
                >
                  <g
                    class="recharts-layer recharts-pie-sector"
                    tabindex="-1"
                  />
                  <g
                    class="recharts-layer recharts-pie-sector"
                    tabindex="-1"
                  />
                </g>
              </g>
              <g
                class="recharts-layer recharts-pie"
                tabindex="0"
              >
                <g
                  class="recharts-layer"
                >
                  <g
                    class="recharts-layer recharts-pie-sector"
                    tabindex="-1"
                  />
                  <g
                    class="recharts-layer recharts-pie-sector"
                    tabindex="-1"
                  />
                  <g
                    class="recharts-layer recharts-pie-sector"
                    tabindex="-1"
                  />
                </g>
              </g>
            </g>
            <g
              tabindex="-1"
            />
            <g
              tabindex="-1"
            />
            <g
              tabindex="-1"
            />
            <g
              tabindex="-1"
            />
            <g
              tabindex="-1"
            />
            <g
              tabindex="-1"
            />
            <g
              tabindex="-1"
            />
            <g
              tabindex="-1"
            />
            <g
              tabindex="-1"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="md:flex-5"
    >
      <ul
        class="space-y-1"
      >
        <li
          class="flex items-center"
        >
          <div
            class="inline-block w-[20px] h-[20px] rounded-full align-[-4px] mr-1.5"
            data-testid="color-bullet-0"
            style="background-color: rgb(151, 187, 205);"
          />
          <small
            class="truncate grow"
            data-testid="name-0"
          >
            foo
            <b>
               (
              123
              )
            </b>
          </small>
        </li>
        <li
          class="flex items-center"
        >
          <div
            class="inline-block w-[20px] h-[20px] rounded-full align-[-4px] mr-1.5"
            data-testid="color-bullet-1"
            style="background-color: rgb(247, 70, 74);"
          />
          <small
            class="truncate grow"
            data-testid="name-1"
          >
            bar
            <b>
               (
              456
              )
            </b>
          </small>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
